<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/pref_header_yellow_page"
        android:key="pref_header_yellow_page"
        android:fragment="org.peercast.pecaplay.prefs.YellowPagePrefsFragment" />

    <Preference
        android:title="@string/pref_peercast_url"
        android:key="pref_peercast_server_url"
        android:persistent="false"
        android:fragment="org.peercast.pecaplay.prefs.PeerCastServerDialogFragment"        />


    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_ng_hidden"
        android:title="@string/ng_hidden" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_viewer_enabled"
        android:title="@string/pref_header_viewer" />

    <Preference
        android:key="pref_notification_sound"
        android:title="@string/notification_settings" />

    <Preference android:selectable="false" />

    <PreferenceCategory
        android:key="pref_category_about"
        android:title="@string/pref_header_about">
        <Preference
            android:key="pref_about"
            android:persistent="false"
            android:title="@string/app_name" />

        <Preference
            android:key="pref_oss_license"
            android:persistent="false"
            android:title="@string/oss_license" />
    </PreferenceCategory>

</PreferenceScreen>