<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="org.peercast.pecaplay.prefs.FavoriteEditorDialogFragment.ViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingLeft="2dp"
        android:paddingTop="1dp"
        android:visibility="@{safeUnbox(viewModel.isAdvancedMode) ? View.VISIBLE : View.INVISIBLE }">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.flagName}"
                android:text="@string/favorite_name" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:checked="@={viewModel.flagDescription}"
                android:text="@string/favorite_description" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.flagComment}"
                android:text="@string/favorite_comment" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.flagGenre}"
                android:text="@string/favorite_genre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <CheckBox
                style="@android:style/Widget.Material.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={!viewModel.flagExactMatch}"
                android:text="@string/favorite_match_partial" />

            <CheckBox
                style="@android:style/Widget.Material.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.flagExactMatch}"
                android:text="@string/favorite_match_exact" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.flagRegex}"
                android:text="@string/favorite_match_regexp" />
        </LinearLayout>


    </LinearLayout>
</layout>